--- a/src/styles.scss
+++ b/src/styles.scss
@@ -171,6 +171,36 @@ body {
     }
 }
 
+.major-page{
+    .headSpace{
+        display:flex;
+        justify-content:space-between;
+        padding:10px;
+        align-items: flex-end;
+        button{
+            min-width: 100px;
+        }
+        .head1{
+            display:flex;
+            flex-direction: column;
+        }
+    }
+}
+.major-class-page{
+    .headSpace{
+        display:flex;
+        justify-content:space-between;
+        padding:10px;
+        align-items: flex-end;
+        button{
+            min-width: 100px;
+        }
+        .head1{
+            display:flex;
+            flex-direction: column;
+        }
+    }
+}
 
 .input-field {
     text-align: left;
