--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,7 +13,7 @@ body {
     a {
         text-decoration: none;
         color: rgb(37, 36, 43);
-        padding: 0.5em;
+        padding: 0.5em !important;
     }
 }
 .shadow-navbar {
