--- a/src/styles.scss
+++ b/src/styles.scss
@@ -220,6 +220,12 @@ body {
 }
 .instructor-page {
 }
+.admin-page{
+    .checkedKey{
+        color:rgb(219, 129, 12);
+        font-size: 1.3em;
+    }
+}
 
 .input-field {
     text-align: left;
