--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,9 +26,10 @@ body {
 }
 
 .page-title {
-    font-family: 'Times New Roman', Times, serif
+    margin-top:20px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-.nowrap{
+.nowrap {
     white-space: nowrap;
 }
 
@@ -37,33 +38,31 @@ body {
     flex-direction: column;
     padding: 1em;
     min-height: 800px;
-    background: rgb(131, 58, 180);
-    background: linear-gradient(
-        29deg,
-        rgba(131, 58, 180, 1) 0%,
-        rgba(66, 95, 195, 1) 50%,
-        rgba(69, 252, 200, 1) 100%
-    );
-    .title{
-        margin-top:15px;
-        color:white;
+    background-image: url("./image/landing-backgound-htqlsv.svg");
+    width: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    .title {
+        margin-top: 15px;
+        color: white;
     }
-    .flex-space{
-        margin-top:20px;
-        width:100%;
-        display:flex;
-        .content{
-            flex:1;
-            display:flex;
-            flex-direction:column;
-            align-items:center;
+    .flex-space {
+        margin-top: 20px;
+        width: 100%;
+        display: flex;
+        .content {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             .card {
-                flex:1;
                 margin-top: 3em;
-                padding: 2em;
+                padding: 2.5em;
                 background: white;
-                min-width:500px;
-        
+                min-width: 500px;
+
                 h1 {
                     text-align: center;
                     margin-bottom: 1em;
@@ -74,14 +73,11 @@ body {
                 }
             }
         }
-       
-        .decor{
-            flex:1;
+
+        .decor {
+            flex: 1;
         }
-
     }
-
-    
 }
 
 .manager-page {
@@ -220,9 +216,9 @@ body {
 }
 .instructor-page {
 }
-.admin-page{
-    .checkedKey{
-        color:rgb(219, 129, 12);
+.admin-page {
+    .checkedKey {
+        color: rgb(219, 129, 12);
         font-size: 1.3em;
     }
 }
